# oboe

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING  CONTRIBUTORS  Doxyfile  FullGuide.md  GettingStarted.md  README  README.md  _audio_clock_8h_source.html  _audio_stream_8h_source.html  _audio_stream_base_8h_source.html  _audio_stream_builder_8h_source.html  _audio_stream_callback_8h_source.html  _definitions_8h_source.html  _fifo_buffer_8h_source.html  _fifo_controller_base_8h_source.html  _full_duplex_stream_8h_source.html  _latency_tuner_8h_source.html  _oboe_8h_source.html  _oboe_extensions_8h_source.html  _result_with_value_8h_source.html  _stabilized_callback_8h_source.html  _utilities_8h_source.html  _version_8h_source.html  annotated.html  build_all_android.sh  classes.html  classoboe_1_1_audio_clock-members.html  classoboe_1_1_audio_clock.html  classoboe_1_1_audio_stream-members.html  classoboe_1_1_audio_stream.html  classoboe_1_1_audio_stream_base-members.html  classoboe_1_1_audio_stream_base.html  classoboe_1_1_audio_stream_builder-members.html  classoboe_1_1_audio_stream_builder.html  classoboe_1_1_audio_stream_callback-members.html  classoboe_1_1_audio_stream_callback.html  classoboe_1_1_audio_stream_data_callback-members.html  (+102 more)
apps/OboeTester/app/: CMakeLists.txt  build.gradle  config.h.in  local.properties
apps/OboeTester/app/src/main/: AndroidManifest.xml
apps/OboeTester/app/src/main/cpp/: AAudioExtensions.h  AudioProcessorBase.cpp  AudioProcessorBase.h  AudioStreamGateway.cpp  AudioStreamGateway.h  BlipGenerator.cpp  BlipGenerator.h  FifoProcessor.cpp  FifoProcessor.h  FormatConverterBox.cpp  FormatConverterBox.h  FullDuplexAnalyzer.cpp  FullDuplexAnalyzer.h  FullDuplexDataPath.h  FullDuplexEcho.cpp  FullDuplexEcho.h  FullDuplexGlitches.cpp  FullDuplexGlitches.h  FullDuplexLatency.cpp  FullDuplexLatency.h  FullDuplexStream.cpp  FullDuplexStream.h  FullDuplexStreamConverted.cpp  FullDuplexStreamConverted.h  FullDuplexStreamWithConversion.cpp  FullDuplexStreamWithConversion.h  ImpulseGenerator.cpp  ImpulseGenerator.h  InputStreamCallbackAnalyzer.cpp  InputStreamCallbackAnalyzer.h  InterpolatingDelayLine.cpp  InterpolatingDelayLine.h  LatencyAnalyzer.h  ManyToMultiConverter.cpp  ManyToMultiConverter.h  MonoToMultiConverter.cpp  MonoToMultiConverter.h  MultiChannelFileRecording.h  MultiChannelRecording.h  NativeAudioContext.cpp  (+27 more)
apps/OboeTester/app/src/main/cpp/analyzer/: AverageBuffer.h  BaseSineAnalyzer.h  DataPathAnalyzer.cpp  DataPathAnalyzer.h  FrequencyAnalyzer.cpp  FrequencyAnalyzer.h  GlitchAnalyzer.h  InfiniteRecording.h  LatencyAnalyzer.h  ManchesterEncoder.h  PeakDetector.h  PseudoRandom.h  fft.h  (+2 more)
apps/OboeTester/app/src/watch/: AndroidManifest.xml
apps/powerplay/app/: CMakeLists.txt  build.gradle.kts
apps/powerplay/app/src/main/: AndroidManifest.xml
apps/powerplay/app/src/main/cpp/: PowerPlayJNI.cpp
samples/MegaDrone/: CMakeLists.txt  README.md  build.gradle
samples/MegaDrone/src/main/: AndroidManifest.xml
samples/MegaDrone/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Constants.h  MegaDroneEngine.cpp  MegaDroneEngine.h  Mixer.h  MonoToStereo.h  Oscillator.cpp  Oscillator.h  PlayAudioEngine.cpp  PlayAudioEngine.h  RenderableAudio.h  Synth.cpp  Synth.h  native-lib.cpp
samples/MegaDrone/src/main/res/layout/: activity_main.xml
samples/OboeDJ/src/main/cpp/: CMakeLists.txt  DJEngine.cpp  DJEngine.h  Deck.h  SoundPlayer.h  native-lib.cpp
samples/RhythmGame/: CMakeLists.txt  README.md  build.gradle
samples/RhythmGame/src/main/: AndroidManifest.xml
samples/RhythmGame/src/main/assets/: CLAP.raw  FUNKY_HOUSE.raw
samples/RhythmGame/src/main/cpp/: Game.cpp  Game.h  GameConstants.h  native-lib.cpp
samples/RhythmGame/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h  Mixer.cpp  Mixer.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h  RenderableAudio.h  SoundRecording.cpp  SoundRecording.h
samples/RhythmGame/src/main/cpp/ui/: OpenGLFunctions.cpp  OpenGLFunctions.h
samples/RhythmGame/src/main/cpp/utils/: LockFreeQueue.h  UtilityFunctions.cpp  UtilityFunctions.h  logging.h
samples/RhythmGame/src/main/res/layout/: activity_main.xml
samples/RhythmGame/test/: CMakeLists.txt  run_tests.sh  testLockFreeQueue.cpp
samples/drumthumper/src/main/cpp/: CMakeLists.txt  DrumPlayerJNI.cpp  OneShotPlayer.cpp  OneShotPlayer.h  WavLoaderJNI.cpp  logging.h
samples/echo/src/main/cpp/: AudioEffect.cpp  AudioEffect.h  CMakeLists.txt  EchoAudioEngine.cpp  EchoAudioEngine.h  jni_bridge.cpp
samples/hello-cmake-oboe/: CMakeLists.txt  README.md  build.gradle
samples/hello-cmake-oboe/cmake/: External_Oboe.cmake
samples/hello-cmake-oboe/src/main/: AndroidManifest.xml
samples/hello-cmake-oboe/src/main/cpp/: JNIBridge.cpp
samples/hello-cmake-oboe/src/main/res/layout/: activity_main.xml
samples/hello-oboe-with-prefab/src/main/cpp/: CMakeLists.txt
samples/wavlib/src/main/cpp/: CMakeLists.txt
samples/wavlib/src/main/cpp/player/: DataSource.h  OneShotSampleBuffer.cpp  OneShotSampleBuffer.h  Player.cpp  Player.h  SampleBuffer.h  SimpleMultiPlayer.cpp  SimpleMultiPlayer.h
tests/: CMakeLists.txt  README  README.md  run_tests.sh  testAAudio.cpp  testAudioClock.cpp  testFlowgraph.cpp  testFullDuplexStream.cpp  testResampler.cpp  testReturnStop.cpp  testStreamClosedMethods.cpp  testStreamFramesProcessed.cpp  testStreamFramesWritten.cpp  testStreamOpen.cpp  testStreamStates.cpp  testStreamStop.cpp  testStreamStopWrite.cpp  testStreamWaitState.cpp  testUtilities.cpp  testXRunBehaviour.cpp
tests/OboeTest/: build.gradle
tests/OboeTest/app/: CMakeLists.txt  build.gradle
tests/OboeTest/app/src/main/: AndroidManifest.xml
tests/OboeTest/app/src/main/cpp/: native-lib.cpp
tests/OboeTest/gradle/wrapper/: gradle-wrapper.properties
tests/UnitTestRunner/: .gitignore  build.gradle  gradlew
tests/UnitTestRunner/app/: build.gradle
tests/UnitTestRunner/app/src/main/: AndroidManifest.xml
tests/UnitTestRunner/gradle/wrapper/: gradle-wrapper.properties
(+1191 files in other folders)
